# limavel

./: .gitignore  Cargo.toml  README.md  REAME.md
.github/workflows/: release.yml
ansible/: playbook.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/laravel/tasks/: main.yml
ansible/roles/mailhog/tasks/: main.yml
ansible/roles/mailpit/tasks/: main.yml
ansible/roles/mariadb/tasks/: main.yml
ansible/roles/mongodb/tasks/: main.yml
ansible/roles/network/handlers/: main.yml
ansible/roles/network/tasks/: main.yml
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: site.conf.j2
ansible/roles/nodejs/tasks/: main.yml
ansible/roles/php/templates/: php-fpm-pool.conf.j2
ansible/roles/postgresql/tasks/: main.yml
ansible/roles/valkey/tasks/: main.yml
provision/ansible/roles/common/tasks/: main.yml
provision/ansible/roles/composer/tasks/: main.yml
provision/ansible/roles/databases/tasks/: main.yml
provision/ansible/roles/mysql/tasks/: main.yml
provision/ansible/roles/nginx/handlers/: main.yml
provision/ansible/roles/ohmyzsh/tasks/: main.yml
provision/ansible/roles/php/tasks/: main.yml
provision/ansible/roles/webdriver/tasks/: main.yml
src/: bootstrap.rs  cli.rs  error.rs  hosts.rs  main.rs
src/ansible/: mod.rs  playbooks.rs  runner.rs
src/bootstraps/debian/trixie/: main.sh
src/commands/: destroy.rs  edit.rs  init.rs  mod.rs  provision.rs  publish.rs  reboot.rs  ssh.rs  start.rs  status.rs  stop.rs
src/config/: lima_config.rs  limavel_config.rs  mod.rs
src/lima/: client.rs
templates/: default.yaml
