[package]
name = "limavel"
version = "0.4.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
shellexpand = "3"
thiserror = "2"
anyhow = "1"
colored = "3"
which = "7"
tempfile = "3"
tar = "0.4.45"
include_dir = "0.7"
